ADD: Rx+Firebase

--- a/여행의 시작 Boarding/Info.plist
+++ b/여행의 시작 Boarding/Info.plist
@@ -49,5 +49,7 @@
 	</dict>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
